// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/kanban/calculations/KanbanCalculationOptions base case 1`] = `
<div>
  <span
    class="variable variable"
  />
</div>
`;

exports[`components/kanban/calculations/KanbanCalculationOptions with menu open 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="variable variable"
  />
</div>
`;

exports[`components/kanban/calculations/KanbanCalculationOptions with submenu open 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="variable variable"
  />
</div>
`;
